@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Detection of stable patients/studies/series
 * C-Find SCU at the instance level
 
 
